Add support for spatial data
Updated pom.xml with required libraries for parsing GeoJSON and saving geometries using PostGIS.
Implemented an initial version for creating DAIAD@commons groups.
Updated Amphiro device configuration management implementation. Instead of saving key/value pairs, all settings are saved per configuration as a single row. Amphiro device configuration schema is fixed and won’t change.
Updated global error controller for handling AJAX requests in a similar way to the rest error controller advice. Response now has the same syntax as RestResponse object.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,28 +1,28 @@
 # SharedErrorCode
 SharedErrorCode.UNKNOWN = Internal server error has occurred.
 SharedErrorCode.PARSE_ERROR = Request parsing has failed.
-    
+
 SharedErrorCode.AUTHENTICATION =Authentication has failed.
 SharedErrorCode.AUTHORIZATION = Authorization has failed.
-    
+
 SharedErrorCode.RESOURCE_NOT_FOUND = Resource was not found.
 SharedErrorCode.METHOD_NOT_SUPPORTED = Request method {method} is not supported.
-    
+
 # ActionErrorCode
 ActionErrorCode.EXPORT_TYPE_NOT_SUPPORTED = Export type {type} is not supported.
 
 # User
 UserErrorCode.ROLE_INITIALIZATION = Role initialization has failed.
 UserErrorCode.ADMIN_INITIALIZATION = Utility default administration accounts initialization has failed.
-    
+
 UserErrorCode.USERNANE_RESERVED = User name {username} is reserved.
 UserErrorCode.USERNANE_NOT_AVAILABLE = User name {username} is not available.
 UserErrorCode.USERNANE_NOT_FOUND = Account {username} was not found.
-    
+
 UserErrorCode.WHITELIST_MISMATCH = User name {username} was not found in the user white list.
-    
+
 UserErrorCode.VALIDATION = Validation has failed.
-    
+
 # Device
 DeviceErrorCode.NOT_FOUND = Device {key} has not been found.
 DeviceErrorCode.NOT_SUPPORTED = Device type {type} was not found.
@@ -38,31 +38,43 @@ ExportErrorCode.PATH_CREATION_FAILED = Failed to create folder in the file syste
 # Endpoint: /api/v1/user/register
 NotEmpty.userRegistrationRequest.account.username = User name can not be empty
 Size.userRegistrationRequest.account.username = User name size must not be more than 100 characters
-Email.userRegistrationRequest.account.username = User name must be a valid email address 
+Email.userRegistrationRequest.account.username = User name must be a valid email address
 
-NotEmpty.userRegistrationRequest.account.password = Password can not be empty 
+NotEmpty.userRegistrationRequest.account.password = Password can not be empty
 Size.userRegistrationRequest.account.password = Password must be at least 8 characters
 
-NotEmpty.userRegistrationRequest.account.firstname = First name can not be empty 
+NotEmpty.userRegistrationRequest.account.firstname = First name can not be empty
 Size.userRegistrationRequest.account.firstname =  First name size must not be more than 40 characters
 
-NotEmpty.userRegistrationRequest.account.lastname = Last name can not be empty 
+NotEmpty.userRegistrationRequest.account.lastname = Last name can not be empty
 Size.userRegistrationRequest.account.lastname = Last name size must not be more than 70 characters
 
-NotNull.userRegistrationRequest.account.gender = Gender can not be null 
+NotNull.userRegistrationRequest.account.gender = Gender can not be null
 
-NotNull.userRegistrationRequest.account.birthdate = Birth date can not be null 
-Past.userRegistrationRequest.account.birthdate = Birth date must be less or equal to current date time 
+NotNull.userRegistrationRequest.account.birthdate = Birth date can not be null
+Past.userRegistrationRequest.account.birthdate = Birth date must be less or equal to current date time
 
-NotNull.userRegistrationRequest.account.country = Country can not be null 
+NotNull.userRegistrationRequest.account.country = Country can not be null
 Size.userRegistrationRequest.account.country = Country size must not be more than 50 characters
 
-NotNull.userRegistrationRequest.account.timezone = Time zone can not be null 
+NotNull.userRegistrationRequest.account.timezone = Time zone can not be null
 Size.userRegistrationRequest.account.timezone = Time zone size must not be more than 50 characters
 
-NotNull.userRegistrationRequest.account.postalCode = Postal code can not be null 
+NotNull.userRegistrationRequest.account.postalCode = Postal code can not be null
 Size.userRegistrationRequest.account.postalCode = Postal code size must not be more than 10 characters
 
-NotNull.userRegistrationRequest.account.locale = Locale can not be null 
+NotNull.userRegistrationRequest.account.locale = Locale can not be null
 NotEmpty.userRegistrationRequest.account.locale = Locale can not be empty
-Pattern.userRegistrationRequest.account.locale = Only en,el,es and de are supported.
+Pattern.userRegistrationRequest.account.locale = Only en,el,es and de are supported
+
+# Endpoint: /api/v1/commons/create
+NotNull.createCommonsRequest.community = Community data can not be null
+
+NotNull.createCommonsRequest.community.locale = Locale can not be null
+NotEmpty.createCommonsRequest.community.locale = Locale can not be empty
+Pattern.createCommonsRequest.community.locale = Only en,el,es and de are supported
+
+NotEmpty.createCommonsRequest.community.name = Name can not be null
+Size.createCommonsRequest.community.name = Name size must not be more than 100 characters
+
+NotEmpty.createCommonsRequest.community.description = Description can not be null
