Add support for trials
Added more screen mockups.
Implemented configuration settings for trials.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,9 @@ UserErrorCode.WHITELIST_MISMATCH = User name {username} was not found in the use
 
 UserErrorCode.VALIDATION = Validation has failed.
 
+# Profile
+ProfileErrorCode.PROFILE_NOT_SUPPORTED = Profile is not supported for application {application}.
+
 # Device
 DeviceErrorCode.NOT_FOUND = Device {key} has not been found.
 DeviceErrorCode.NOT_SUPPORTED = Device type {type} was not found.
