Initial implementation of trial status reports
Fixed several typos.
Smart Water Meter registration is allowed only for administrators.
Updated default configuration files.
Added utility unique id property to authenticated user class. The property value is set during the user authentication process.
Created new methods in user repository for accessing account white list entries.
Added profile save/load support for DAIAD@home (web) and DAIAD@utility applications.
Added new field registered_on to table device.
Added new field last_upload_success_on to table device.
Added new field last_upload_failure_on to table device.
Create new view trial_account_activity.
Implemented DAIAD@utility section for monitoring trial user’s activity such as sign up, sign in, device registration, data uploading etc.

--- a/configuration/messages.properties
+++ b/configuration/messages.properties
@@ -32,6 +32,9 @@ DeviceErrorCode.NOT_FOUND = Device {key} has not been found.
 DeviceErrorCode.NOT_SUPPORTED = Device type {type} was not found.
 DeviceErrorCode.ALREADY_EXISTS = Device {id} already exists.
 DeviceErrorCode.CONFIGURATION_NOT_FOUND = Configuration version {version} was not found.
+DeviceErrorCode.LOG_DATA_UPLOAD_FAILED = Failed to log data upload session for device {key}.
+DeviceErrorCode.DEVICE_OWNER_NOT_FOUND = Failed to register meter {meter}. Account with key {key} was not found.
+DeviceErrorCode.DEVICE_ACCESS_DENIED = Access to user {user} on devices of user {owner} has been denied.
 
 # Data
 DataErrorCode.TIME_GRANULARITY_NOT_SUPPORTED = Time granularity level {level} is not supported.
