--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,6 +32,9 @@ DeviceErrorCode.NOT_FOUND = Device {key} has not been found.
 DeviceErrorCode.NOT_SUPPORTED = Device type {type} was not found.
 DeviceErrorCode.ALREADY_EXISTS = Device {id} already exists.
 DeviceErrorCode.CONFIGURATION_NOT_FOUND = Configuration version {version} was not found.
+DeviceErrorCode.LOG_DATA_UPLOAD_FAILED = Failed to log data upload session for device {key}.
+DeviceErrorCode.DEVICE_OWNER_NOT_FOUND = Failed to register meter {meter}. Account with key {key} was not found.
+DeviceErrorCode.DEVICE_ACCESS_DENIED = Access to user {user} on devices of user {owner} has been denied.
 
 # Data
 DataErrorCode.TIME_GRANULARITY_NOT_SUPPORTED = Time granularity level {level} is not supported.
