Updates to data query API and reporting UI section
Created builder class with fluent API for constructing data queries.
Implemented service for exporting user Amphiro data from the reporting section.
Updated data query structure. Instead of supporting users and groups separately, only collections of users are now supported.
Added pre-processing of data queries for filtering users based on water meter location information and setting time constraints.

--- a/configuration/messages.properties
+++ b/configuration/messages.properties
@@ -10,6 +10,7 @@ SharedErrorCode.METHOD_NOT_SUPPORTED = Request method {method} is not supported.
 
 # ActionErrorCode
 ActionErrorCode.EXPORT_TYPE_NOT_SUPPORTED = Export type {type} is not supported.
+Time zone [%s] is not supported
 
 # User
 UserErrorCode.ROLE_INITIALIZATION = Role initialization has failed.
@@ -42,8 +43,10 @@ DeviceErrorCode.DEVICE_ACCESS_DENIED = Access to user {user} on devices of user 
 # Data
 DataErrorCode.TIME_GRANULARITY_NOT_SUPPORTED = Time granularity level {level} is not supported.
 DataErrorCode.DELETE_NOT_ALLOWED_FOR_HISTORY = Delete operation is not allowed for history session {session} with timestamp {timestamp}.
+
 # Export
-ExportErrorCode.PATH_CREATION_FAILED = Failed to create folder in the file system.
+ExportErrorCode.PATH_CREATION_FAILED = Failed to create folder {path} in the file system.
+ExportErrorCode.TIMEZONE_NOT_FOUND = Time zone {timezone} was not found.
 
 
 # Endpoint: /api/v1/user/register
