--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,9 @@ UserErrorCode.ROLE_NOT_FOUND = Role {role} was not found.
 UserErrorCode.NO_ROLE_SELECTED = No role is selected.
 
 UserErrorCode.WHITELIST_MISMATCH = User name {username} was not found in the user white list.
+UserErrorCode.USERNAME_EXISTS_IN_WHITELIST = User name {username} is already in the user white list.
+
+UserErrorCode.UTILITY_DOES_NOT_EXIST = Utility {utility} does not exist.
 
 UserErrorCode.VALIDATION = Validation has failed.
 
