--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,10 @@ SharedErrorCode.METHOD_NOT_SUPPORTED = Request method {method} is not supported.
 
 SharedErrorCode.FILE_DOES_NOT_EXIST = File {filename} was not found.
 
+SharedErrorCode.TIMEZONE_NOT_FOUND = Time zone {timezone} was not found.
+
+SharedErrorCode.DIR_CREATION_FAILED = Failed to create directory {path} in the file system.
+
 # ActionErrorCode
 ActionErrorCode.EXPORT_TYPE_NOT_SUPPORTED = Export type {type} is not supported.
 
@@ -48,10 +52,6 @@ DeviceErrorCode.DEVICE_ACCESS_DENIED = Access to user {user} on devices of user 
 # Data
 DataErrorCode.TIME_GRANULARITY_NOT_SUPPORTED = Time granularity level {level} is not supported.
 DataErrorCode.DELETE_NOT_ALLOWED_FOR_HISTORY = Delete operation is not allowed for history session {session} with timestamp {timestamp}.
-
-# Export
-ExportErrorCode.PATH_CREATION_FAILED = Failed to create folder {path} in the file system.
-ExportErrorCode.TIMEZONE_NOT_FOUND = Time zone {timezone} was not found.
 
 # Endpoint: /api/v1/user/register
 NotEmpty.userRegistrationRequest.account.username = User name can not be empty
