--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,7 +53,7 @@ DeviceErrorCode.DEVICE_ACCESS_DENIED = Access to user {user} on devices of user 
 DataErrorCode.TIME_GRANULARITY_NOT_SUPPORTED = Time granularity level {level} is not supported.
 DataErrorCode.DELETE_NOT_ALLOWED_FOR_HISTORY = Delete operation is not allowed for history session {session}.
 DataErrorCode.NO_SESSION_FOUND_FOR_MEASUREMENT = No session found for measurement with session id {session} and index {index}.
-DataErrorCode.HISTORY_SESSION_MEASUREMENT_TIMESTAMP_MISMATCH = Historical session {session} and measurement {index} timestamp mismatch.
+DataErrorCode.HISTORY_SESSION_MEASUREMENT_FOUND = Found measurement {index} for historical session {session}.
 
 # Endpoint: /api/v1/user/register
 NotEmpty.userRegistrationRequest.account.username = User name can not be empty
