Improve error messages
Create better error messages for security exceptions. Avoid logging authentication error messages twice.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,8 +2,12 @@
 SharedErrorCode.UNKNOWN = Internal server error has occurred.
 SharedErrorCode.PARSE_ERROR = Request parsing has failed.
 
-SharedErrorCode.AUTHENTICATION =Authentication has failed.
+SharedErrorCode.AUTHENTICATION = Authentication has failed.
+SharedErrorCode.AUTHENTICATION_NO_CREDENTIALS = Authentication has failed. No credentials.
+SharedErrorCode.AUTHENTICATION_USERNAME = Authentication has failed for user {username}.
 SharedErrorCode.AUTHORIZATION = Authorization has failed.
+SharedErrorCode.AUTHORIZATION_ANONYMOUS_SESSION = Authorization has failed. Anonymous session.
+SharedErrorCode.AUTHORIZATION_MISSING_ROLE = Authorization has failed. Missing required role {role}.
 
 SharedErrorCode.RESOURCE_NOT_FOUND = Resource was not found.
 SharedErrorCode.METHOD_NOT_SUPPORTED = Request method {method} is not supported.
