Several minor updates
Update navigation links for the DAIAD@utility application. Reporting section has changed to two sub sections, trial activity overview and charts.
Minor updates to the UI.
Display logged user name.
Remove dependency on global script variables by using cookies for profile reloading and default locale selection.
Add Mapped Diagnostic Context (MDC) to logging using a filter.
Reduced excessive message logging. ApplicationException instances are logged only once.
All HBASE repositories have become singletons (remove scope annotation with prototype value).

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,9 +14,12 @@ SharedErrorCode.METHOD_NOT_SUPPORTED = Request method {method} is not supported.
 
 SharedErrorCode.FILE_DOES_NOT_EXIST = File {filename} was not found.
 
+SharedErrorCode.INVALID_TIME_ZONE = Time zone is not valid.
 SharedErrorCode.TIMEZONE_NOT_FOUND = Time zone {timezone} was not found.
 
 SharedErrorCode.DIR_CREATION_FAILED = Failed to create directory {path} in the file system.
+
+SharedErrorCode.INVALID_SRID = SRID is not valid.
 
 # ActionErrorCode
 ActionErrorCode.EXPORT_TYPE_NOT_SUPPORTED = Export type {type} is not supported.
