Several bug fixes to data service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,7 +24,7 @@ SharedErrorCode.INVALID_SRID = SRID is not valid.
 # ActionErrorCode
 ActionErrorCode.EXPORT_TYPE_NOT_SUPPORTED = Export type {type} is not supported.
 
-# User
+# UserErrorCode
 UserErrorCode.ROLE_INITIALIZATION = Role initialization has failed.
 UserErrorCode.ADMIN_INITIALIZATION = Utility default administration accounts initialization has failed.
 
@@ -42,11 +42,11 @@ UserErrorCode.UTILITY_DOES_NOT_EXIST = Utility with {id} does not exist.
 
 UserErrorCode.VALIDATION = Validation has failed.
 
-# Profile
+# ProfileErrorCode
 ProfileErrorCode.PROFILE_NOT_SUPPORTED = Profile is not supported for application {application}.
 ProfileErrorCode.PROFILE_VERSION_NOT_FOUND = Profile version {version} was not found.
 
-# Device
+# DeviceErrorCode
 DeviceErrorCode.NOT_FOUND = Device {key} was not found.
 DeviceErrorCode.METER_NOT_FOUND = Water meter {serial} was not found.
 DeviceErrorCode.NOT_SUPPORTED = Device type {type} was not found.
@@ -56,13 +56,30 @@ DeviceErrorCode.LOG_DATA_UPLOAD_FAILED = Failed to log data upload session for d
 DeviceErrorCode.DEVICE_OWNER_NOT_FOUND = Failed to register meter {meter}. Account with key {key} was not found.
 DeviceErrorCode.DEVICE_ACCESS_DENIED = Access to user {user} on devices of user {owner} has been denied.
 
-# Data
+# DataErrorCode
 DataErrorCode.TIME_GRANULARITY_NOT_SUPPORTED = Time granularity level {level} is not supported.
 DataErrorCode.DELETE_NOT_ALLOWED_FOR_HISTORY = Delete operation is not allowed for history session {session}.
 DataErrorCode.NO_SESSION_FOUND_FOR_MEASUREMENT = No session found for measurement with session id {session} and index {index}.
 DataErrorCode.HISTORY_SESSION_MEASUREMENT_FOUND = Found measurement {index} for historical session {session}.
 
-# Endpoint: /api/v1/user/register
+#QueryErrorCode
+QueryErrorCode.TIME_FILTER_INVALID = Time filter type is not supported.
+QueryErrorCode.TIME_FILTER_NOT_SET = Time filter is required.
+QueryErrorCode.TIME_FILTER_ABSOLUTE_END_NOT_SET = End date time is required for ABSOLUTE time filter.
+QueryErrorCode.TIME_FILTER_SLIDING_DURATION_NOT_SET = Duration is required for SLIDING time filter.
+QueryErrorCode.TIME_FILTER_SLIDING_UNIT_NOT_SET = Time unit is required for SLIDING time filter.
+QueryErrorCode.SPATIAL_FILTER_GEOMETRY_NOT_SET = Geometry is required for spatial filter.
+QueryErrorCode.SPATIAL_FILTER_DISTANCE_NOT_SET = Distance is required for spatial filter of type DISTANCE.
+QueryErrorCode.POPULATION_FILTER_NOT_SET = At least one population filter is required.
+QueryErrorCode.POPULATION_FILTER_INVALID = Invalid population filter.
+QueryErrorCode.POPULATION_FILTER_IS_EMPTY = Population filter is empty.
+QueryErrorCode.RANKING_TYPE_NOT_SET = Ranking type is not set.
+QueryErrorCode.RANKING_INVALID_LIMIT = Ranking limit is invalid. Limit must be greater than or equal to 1.
+QueryErrorCode.RANKING_INVALID_FIELD = Ranking field is not supported.
+QueryErrorCode.RANKING_INVALID_METRIC = Ranking metric is not supported.
+QueryErrorCode.METRIC_INVALID = Metric is not supported.
+
+# UserRegistrationRequest
 NotEmpty.userRegistrationRequest.account.username = User name can not be empty
 Size.userRegistrationRequest.account.username = User name size must not be more than 100 characters
 Email.userRegistrationRequest.account.username = User name must be a valid email address
@@ -98,7 +115,7 @@ NotNull.userRegistrationRequest.account.locale = Locale can not be null
 NotEmpty.userRegistrationRequest.account.locale = Locale can not be empty
 Pattern.userRegistrationRequest.account.locale = Only en,el,es and de are supported
 
-# Endpoint: /api/v1/commons/create
+# CreateCommonsRequest
 NotNull.createCommonsRequest.community = Community data can not be null
 
 NotNull.createCommonsRequest.community.locale = Locale can not be null
