New HBASE Amphiro repository implementation
Implemented a new HBASE Amphiro repository that indexes sessions and measurements by session id instead of timestamp.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -58,7 +58,7 @@ DeviceErrorCode.DEVICE_ACCESS_DENIED = Access to user {user} on devices of user 
 
 # DataErrorCode
 DataErrorCode.TIME_GRANULARITY_NOT_SUPPORTED = Time granularity level {level} is not supported.
-DataErrorCode.DELETE_NOT_ALLOWED_FOR_HISTORY = Delete operation is not allowed for history session {session}.
+DataErrorCode.DELETE_NOT_ALLOWED_FOR_HISTORY = Delete operation is not allowed for historical session {session}.
 DataErrorCode.NO_SESSION_FOUND_FOR_MEASUREMENT = No session found for measurement with session id {session} and index {index}.
 DataErrorCode.HISTORY_SESSION_MEASUREMENT_FOUND = Found measurement {index} for historical session {session}.
 
