--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ SharedErrorCode.INVALID_SRID = SRID is not valid.
 
 # ActionErrorCode
 ActionErrorCode.EXPORT_TYPE_NOT_SUPPORTED = Export type {type} is not supported.
+ActionErrorCode.USER_METER_REGISTRATION_FAILED = Failed to register meter {serial} to user {user}.
 
 # UserErrorCode
 UserErrorCode.ROLE_INITIALIZATION = Role initialization has failed.
@@ -78,6 +79,7 @@ QueryErrorCode.RANKING_INVALID_LIMIT = Ranking limit is invalid. Limit must be g
 QueryErrorCode.RANKING_INVALID_FIELD = Ranking field is not supported.
 QueryErrorCode.RANKING_INVALID_METRIC = Ranking metric is not supported.
 QueryErrorCode.METRIC_INVALID = Metric is not supported.
+QueryErrorCode.POPULATION_FILTER_INVALID_CLUSTER = A cluster must define exactly one of the properties cluster, name or type.
 
 # UserRegistrationRequest
 NotEmpty.userRegistrationRequest.account.username = User name can not be empty
