Integrate message generation with job scheduler
Removed unused action methods from controllers.
Registered message generation to the scheduler service.
Performed extensive refactoring to the message generation code base. Service dependencies have been removed from repositories. Removed auto wiring of data transfer objects from services and repositories. Data is passed to function calls through arguments.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 # SharedErrorCode
 SharedErrorCode.UNKNOWN = Internal server error has occurred.
+SharedErrorCode.NOT_IMPLEMENTED = Operation is not implemented.
 SharedErrorCode.PARSE_ERROR = Request parsing has failed.
 
 SharedErrorCode.AUTHENTICATION = Authentication has failed.
