--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,9 +35,20 @@ UserErrorCode.UTILITY_DOES_NOT_EXIST = Utility with {id} does not exist.
 
 UserErrorCode.VALIDATION = Validation has failed.
 
+UserErrorCode.USERID_NOT_FOUND = Account with id \"{accountId}\" does not exist.
+UserErrorCode.ACCOUNT_ACCESS_RESTRICTED = Access to account with id \"{accountId}\" is restricted.
+
 # Profile
 ProfileErrorCode.PROFILE_NOT_SUPPORTED = Profile is not supported for application {application}.
 ProfileErrorCode.PROFILE_VERSION_NOT_FOUND = Profile version {version} was not found.
+
+# Group
+GroupErrorCode.GROUP_EXISTS = Group with name \"{groupName}\" already exists.
+GroupErrorCode.GROUP_DOES_NOT_EXIST = Group with id \"{groupId}\" does not exist.
+GroupErrorCode.GROUP_ACCESS_RESTRICTED = Access to group with id \"{groupId}\" is restricted.
+
+#Favourite
+FavouriteErrorCode.INVALID_FAVOURITE_TYPE = Favourite has invalid type.
 
 # Device
 DeviceErrorCode.NOT_FOUND = Device {key} was not found.
