Update message repository and controller
Implemented data paging support for loading messages.
Allow users to acknowledge multiple messages in a single operation.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -85,6 +85,9 @@ QueryErrorCode.POPULATION_FILTER_INVALID_CLUSTER = A cluster must define exactly
 # SchedulerErrorCode
 SchedulerErrorCode.SCHEDULER_JOB_LAUNCH_FAIL = Failed to launch job {job}.
 
+# MessageErrorCode
+MessageErrorCode.MESSAGE_TYPE_NOT_SUPPORTED = Message type {type} is not supported.
+
 # UserRegistrationRequest
 NotEmpty.userRegistrationRequest.account.username = User name can not be empty
 Size.userRegistrationRequest.account.username = User name size must not be more than 100 characters
