Implementing Group and Favourite Deletion functionality. Backend implementation is complete and frontend incomplete.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -58,6 +58,8 @@ GroupErrorCode.GROUP_ACCESS_RESTRICTED = Access to group with id \"{groupId}\" i
 
 # FavouriteErrorCode
 FavouriteErrorCode.INVALID_FAVOURITE_TYPE = Favourite has invalid type.
+FavouriteErrorCode.FAVOURITE_DOES_NOT_EXIST = Favourite with id \"{favouriteId}\" does not exist.
+FavouriteErrorCode.FAVOURITE_ACCESS_RESTRICTED = Access to favourite with id \"{favouriteId}\" is restricted.
 
 # DeviceErrorCode
 DeviceErrorCode.NOT_FOUND = Device {key} was not found.
