Add Map Reduce job execution functionality
Implemented Map Reduce job execution using the scheduling service.
Several bug fixes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,6 +98,7 @@ QueryErrorCode.POPULATION_FILTER_INVALID_CLUSTER = A cluster must define exactly
 
 # SchedulerErrorCode
 SchedulerErrorCode.SCHEDULER_JOB_LAUNCH_FAIL = Failed to launch job {job}.
+SchedulerErrorCode.MAPREDUCE_JOB_INIT_FAIL = Failed to initialize map reduce job {job}.
 
 # MessageErrorCode
 MessageErrorCode.MESSAGE_TYPE_NOT_SUPPORTED = Message type {type} is not supported.
