Add smart water meter forecasting support
Removed unused import statements.
Implemented UI for uploading pre-computed smart water meter forecasting data.
Added operations for querying smart water meter forecasting data.
Minor UI improvements to DAIAD@utility.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ SharedErrorCode.INVALID_SRID = SRID is not valid.
 # ActionErrorCode
 ActionErrorCode.EXPORT_TYPE_NOT_SUPPORTED = Export type {type} is not supported.
 ActionErrorCode.USER_METER_REGISTRATION_FAILED = Failed to register meter {serial} to user {user}.
+ActionErrorCode.FILE_TYPE_NOT_SUPPORTED = File with data type {type} is not supported.
 
 # UserErrorCode
 UserErrorCode.ROLE_INITIALIZATION = Role initialization has failed.
