--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ SharedErrorCode.RESOURCE_DOES_NOT_EXIST = Resource {resource} was not found.
 
 SharedErrorCode.INVALID_TIME_ZONE = Time zone is not valid.
 SharedErrorCode.TIMEZONE_NOT_FOUND = Time zone {timezone} was not found.
+SharedErrorCode.LOCALE_NOT_SUPPORTED = Locale {locale} is not supported.
 
 SharedErrorCode.DIR_CREATION_FAILED = Failed to create directory {path} in the file system.
 
@@ -99,7 +100,9 @@ QueryErrorCode.POPULATION_FILTER_INVALID_CLUSTER = A cluster must define exactly
 
 # SchedulerErrorCode
 SchedulerErrorCode.SCHEDULER_JOB_LAUNCH_FAIL = Failed to launch job {job}.
+SchedulerErrorCode.SCHEDULER_JOB_STEP_FAIL = Failed to execute step {step}.
 SchedulerErrorCode.MAPREDUCE_JOB_INIT_FAIL = Failed to initialize map reduce job {job}.
+SchedulerErrorCode.SCHEDULER_INVALID_PARAMETER = Invalid value {value} for parameter {parameter}.
 
 # MessageErrorCode
 MessageErrorCode.MESSAGE_TYPE_NOT_SUPPORTED = Message type {type} is not supported.
