--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,6 +49,9 @@ UserErrorCode.VALIDATION = Validation has failed.
 UserErrorCode.USERID_NOT_FOUND = Account with id \"{accountId}\" does not exist.
 UserErrorCode.ACCOUNT_ACCESS_RESTRICTED = Access to account with id \"{accountId}\" is restricted.
 
+#PasswordErrorCode
+PasswordErrorCode.INVALID_LENGTH = Password length must be at least 8 characters long.
+
 # ProfileErrorCode
 ProfileErrorCode.PROFILE_NOT_SUPPORTED = Profile is not supported for application {application}.
 ProfileErrorCode.PROFILE_VERSION_NOT_FOUND = Profile version {version} was not found.
