Implement weather data collection service
Implemented a new job for collecting weather data from several sources.
Implemented support for AEMET (http://www.aemet.es/) weather API.
Updated database schema for storing hourly and daily weather data from multiple data providers for each utility.
Implemented controller actions and API methods for exposing weather data to DAIAD@home and DAIAD@utility applications.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -111,6 +111,11 @@ SchedulerErrorCode.SCHEDULER_INVALID_PARAMETER = Invalid value {value} for param
 # MessageErrorCode
 MessageErrorCode.MESSAGE_TYPE_NOT_SUPPORTED = Message type {type} is not supported.
 
+# WeatherErrorCode
+WeatherErrorCode.SERVICE_NOT_FOUND = Weather service was not found.
+WeatherErrorCode.UTILITY_NOT_FOUND = Utility was not found or not supported.
+WeatherErrorCode.INVALID_DATETIME = Invalid date format.
+
 # UserRegistrationRequest
 NotEmpty.userRegistrationRequest.account.username = User name can not be empty
 Size.userRegistrationRequest.account.username = User name size must not be more than 100 characters
