Implement password reset and change actions
Updated database schema for supporting user password reset.
Updated application domain model for the new schema.
Added new mail service for sending mails.
Implemented mail HTML5 content rendering using the Thymeleaf view engine.
Updated application configuration for rendering both web application and mail templates.
Implemented several bug fixes.
Updated documentation for the client API.
Updated project site documentation.
Updated comments for code documentation.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,6 +49,14 @@ UserErrorCode.VALIDATION = Validation has failed.
 UserErrorCode.USERID_NOT_FOUND = Account with id \"{accountId}\" does not exist.
 UserErrorCode.ACCOUNT_ACCESS_RESTRICTED = Access to account with id \"{accountId}\" is restricted.
 
+UserErrorCode.PASSWORD_RESET_TOKEN_NOT_FOUND = Token was not found.
+UserErrorCode.PASSWORD_RESET_TOKEN_EXPIRED = Token has expired.
+UserErrorCode.PASSWORD_RESET_TOKEN_ALREADY_REEDEMED = Token has already been redeemed.
+UserErrorCode.PASSWORD_RESET_TOKEN_USER_NOT_FOUND = User has been deleted.
+UserErrorCode.PASSWORD_RESET_PIN_MISMATCH = Invalid PIN.
+UserErrorCode.PASSWORD_RESET_NOT_ALLOWED = Password reset is disabled.
+UserErrorCode.PASSWORD_RESET_APPLICATION_NOT_SUPPORTED = Application is not supported.
+
 #PasswordErrorCode
 PasswordErrorCode.INVALID_LENGTH = Password length must be at least 8 characters long.
 
@@ -163,3 +171,6 @@ NotEmpty.createCommonsRequest.community.name = Name can not be null
 Size.createCommonsRequest.community.name = Name size must not be more than 100 characters
 
 NotEmpty.createCommonsRequest.community.description = Description can not be null
+
+# Password Reset
+ResetPassword.Mail.Subject = Password Reset
