Add support for household members
Updated database schema for storing household and member data.
Updated login and profile actions in order to return household data.
Crated new action for updating household member information.
Updated API documentation.
Fixed minor errors in site, code and client API documentation.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,6 +63,7 @@ PasswordErrorCode.INVALID_LENGTH = Password length must be at least 8 characters
 # ProfileErrorCode
 ProfileErrorCode.PROFILE_NOT_SUPPORTED = Profile is not supported for application {application}.
 ProfileErrorCode.PROFILE_VERSION_NOT_FOUND = Profile version {version} was not found.
+ProfileErrorCode.HOUSEHOLD_MEMBER_UNEXPECTED_INDEX = Household index does not exist or out of order.
 
 # GroupErrorCode
 GroupErrorCode.GROUP_EXISTS = Group with name \"{groupName}\" already exists.
