Update household member management
Updated household member persistence logic. No records are ever deleted. Instead, records are marked as inactive.
A new model property and a database field have been added for storing if a household member is active.
Updated HBASE repository for storing member information with shower data.
Added new controller action for assigning members to existing showers.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,7 +63,7 @@ PasswordErrorCode.INVALID_LENGTH = Password length must be at least 8 characters
 # ProfileErrorCode
 ProfileErrorCode.PROFILE_NOT_SUPPORTED = Profile is not supported for application {application}.
 ProfileErrorCode.PROFILE_VERSION_NOT_FOUND = Profile version {version} was not found.
-ProfileErrorCode.HOUSEHOLD_MEMBER_UNEXPECTED_INDEX = Household index does not exist or out of order.
+ProfileErrorCode.HOUSEHOLD_MEMBER_DUPLICATE_INDEX = Member duplicate index {index} found.  
 
 # GroupErrorCode
 GroupErrorCode.GROUP_EXISTS = Group with name \"{groupName}\" already exists.
@@ -91,6 +91,7 @@ DataErrorCode.DELETE_NOT_ALLOWED_FOR_HISTORY = Delete operation is not allowed f
 DataErrorCode.NO_SESSION_FOUND_FOR_MEASUREMENT = No session found for measurement with session id {session} and index {index}.
 DataErrorCode.HISTORY_SESSION_MEASUREMENT_FOUND = Found measurement {index} for historical session {session}.
 DataErrorCode.MEASUREMENT_NO_UNIQUE_INDEX = Session {session} measurement {index} index must be unique.
+DataErrorCode.SESSION_NOT_FOUND = Session {session} does not exist.
 
 # QueryErrorCode
 QueryErrorCode.TIME_FILTER_INVALID = Time filter type is not supported.
