Implement ETL processes for exporting data
Remove unused repositories and dependencies from the project POM file.
Updated database schema for storing exported file metadata.
Added new classes to the domain model for managing exported files.
Renamed classes to better reflect their functionality.
Implemented ETL processes for exporting smart water meter and amphiro b1 data.
Created job for scheduling ETL operations.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,6 +35,7 @@ UserErrorCode.ADMIN_INITIALIZATION = Utility default administration accounts ini
 UserErrorCode.USERNANE_RESERVED = User name {username} is reserved.
 UserErrorCode.USERNANE_NOT_AVAILABLE = User name {username} is not available.
 UserErrorCode.USERNANE_NOT_FOUND = Account {username} was not found.
+UserErrorCode.USER_KEY_NOT_FOUND = User was not found.
 
 UserErrorCode.ROLE_NOT_FOUND = Role {role} was not found.
 UserErrorCode.NO_ROLE_SELECTED = No role is selected.
@@ -94,6 +95,7 @@ DataErrorCode.MEASUREMENT_NO_UNIQUE_INDEX = Session {session} measurement {index
 DataErrorCode.SESSION_NOT_FOUND = Session {session} does not exist.
 
 # QueryErrorCode
+QueryErrorCode.EMPTY_QUERY = Query is empty.
 QueryErrorCode.TIME_FILTER_INVALID = Time filter type is not supported.
 QueryErrorCode.TIME_FILTER_NOT_SET = Time filter is required.
 QueryErrorCode.TIME_FILTER_ABSOLUTE_END_NOT_SET = End date time is required for ABSOLUTE time filter.
