Update user roles and application security
Replaced all strings for role names with constants.
Implemented helper methods for checking user roles.
Other Changes: Updated code formatting. Replaced tabs with spaces. Added comments.
Created new roles for controlling access to registered utilities and performing generic system administrative tasks.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@
 SharedErrorCode.UNKNOWN = Internal server error has occurred.
 SharedErrorCode.NOT_IMPLEMENTED = Operation is not implemented.
 SharedErrorCode.PARSE_ERROR = Request parsing has failed.
+SharedErrorCode.INVALID_PARSED_OBJECT = Parsed object type is not supported.
 
 SharedErrorCode.AUTHENTICATION = Authentication has failed.
 SharedErrorCode.AUTHENTICATION_NO_CREDENTIALS = Authentication has failed. No credentials.
@@ -35,7 +36,7 @@ UserErrorCode.ADMIN_INITIALIZATION = Utility default administration accounts ini
 UserErrorCode.USERNANE_RESERVED = User name {username} is reserved.
 UserErrorCode.USERNANE_NOT_AVAILABLE = User name {username} is not available.
 UserErrorCode.USERNANE_NOT_FOUND = Account {username} was not found.
-UserErrorCode.USER_KEY_NOT_FOUND = User was not found.
+UserErrorCode.USER_NOT_FOUND = User was not found.
 
 UserErrorCode.ROLE_NOT_FOUND = Role {role} was not found.
 UserErrorCode.NO_ROLE_SELECTED = No role is selected.
@@ -47,7 +48,7 @@ UserErrorCode.UTILITY_DOES_NOT_EXIST = Utility with {id} does not exist.
 
 UserErrorCode.VALIDATION = Validation has failed.
 
-UserErrorCode.USERID_NOT_FOUND = Account with id \"{accountId}\" does not exist.
+UserErrorCode.USER_KEY_NOT_FOUND = Account with key \"{key}\" does not exist.
 UserErrorCode.ACCOUNT_ACCESS_RESTRICTED = Access to account with id \"{accountId}\" is restricted.
 
 UserErrorCode.PASSWORD_RESET_TOKEN_NOT_FOUND = Token was not found.
