--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,9 @@
 # SharedErrorCode
 SharedErrorCode.UNKNOWN = Internal server error has occurred.
 SharedErrorCode.NOT_IMPLEMENTED = Operation is not implemented.
+SharedErrorCode.RESOURCE_RELEASE_FAILED = "Failed to release resources"
 SharedErrorCode.PARSE_ERROR = Request parsing has failed.
+SharedErrorCode.JSON_SERIALIZE_ERROR = Failed to serialize object of type {type}.
 SharedErrorCode.INVALID_PARSED_OBJECT = Parsed object type is not supported.
 
 SharedErrorCode.AUTHENTICATION = Authentication has failed.
@@ -94,6 +96,8 @@ DataErrorCode.NO_SESSION_FOUND_FOR_MEASUREMENT = No session found for measuremen
 DataErrorCode.HISTORY_SESSION_MEASUREMENT_FOUND = Found measurement {index} for historical session {session}.
 DataErrorCode.MEASUREMENT_NO_UNIQUE_INDEX = Session {session} measurement {index} index must be unique.
 DataErrorCode.SESSION_NOT_FOUND = Session {session} does not exist.
+DataErrorCode.DUPLICATE_SESSION_ID = Duplicate session id {id} has been found for device {deviceName} - {deviceKey} of user {username}.
+DataErrorCode.HBASE_INVALID_COLUMN = HBase column {column} is not supported.
 
 # QueryErrorCode
 QueryErrorCode.EMPTY_QUERY = Query is empty.
