--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -190,3 +190,7 @@ ExportErrorCode.VALIDATION_RULE_DURATION_LESS = <{duration}sec - Rule #2 "Durati
 ExportErrorCode.VALIDATION_RULE_FLOW_LESS = <{flow}lt/min - Rule #3 "Flow less than {flow} liters/minute"
 ExportErrorCode.VALIDATION_RULE_VOLUME_PERCENTILE = <{percent}% volume - Rule #4 "Removed {percent}% of showers with the least volume"
 ExportErrorCode.VALIDATION_RULE_TOO_MANY_RECORDS_REMOVED = <{percent}% showers - More than {percent}% of showers has been removed. Total [{total}]. Removed [{removed}]
+
+# Mail errors
+MailErrorCode.LOG_FAILED = Failed to log mail send operation.
+MailErrorCode.SENT_FAILED = Failed to send mail.
