Update job builders and tasks
Added support for executing Flink jobs.
Implemented several utility tasks e.g. create/delete temporary folders.
Added support for exchanging dynamic parameters between job tasks.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ SharedErrorCode.TIMEZONE_NOT_FOUND = Time zone {timezone} was not found.
 SharedErrorCode.LOCALE_NOT_SUPPORTED = Locale {locale} is not supported.
 
 SharedErrorCode.DIR_CREATION_FAILED = Failed to create directory {path} in the file system.
+SharedErrorCode.FILESYSTEM_NOT_SUPPORTED = File system {filesystem} is not supported.
 
 SharedErrorCode.INVALID_SRID = SRID is not valid.
 
@@ -120,10 +121,12 @@ QueryErrorCode.POPULATION_FILTER_INVALID_CLUSTER = A cluster must define exactly
 QueryErrorCode.SOURCE_INVALID = The selected source is invalid.
 
 # SchedulerErrorCode
-SchedulerErrorCode.SCHEDULER_JOB_LAUNCH_FAIL = Failed to launch job {job}.
-SchedulerErrorCode.SCHEDULER_JOB_STEP_FAIL = Failed to execute step {step}.
-SchedulerErrorCode.MAPREDUCE_JOB_INIT_FAIL = Failed to initialize map reduce job {job}.
+SchedulerErrorCode.SCHEDULER_JOB_LAUNCH_FAILED = Failed to launch job {job}.
+SchedulerErrorCode.SCHEDULER_JOB_STEP_FAILED = Failed to execute step {step}.
 SchedulerErrorCode.SCHEDULER_INVALID_PARAMETER = Invalid value {value} for parameter {parameter}.
+
+SchedulerErrorCode.MAPREDUCE_JOB_INIT_FAILED = Failed to initialize MapReduce job {job}.
+SchedulerErrorCode.FLINK_JOB_INIT_FAILED = Failed to initialize Flink job {job}.
 
 # MessageErrorCode
 MessageErrorCode.MESSAGE_TYPE_NOT_SUPPORTED = Message type {type} is not supported.
