Implement hidden tasks for the scheduler
Implemented hidden tasks for the scheduler. Hidden tasks can be invoked using the API but are not visible to the UI.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -124,6 +124,7 @@ QueryErrorCode.SOURCE_INVALID = The selected source is invalid.
 SchedulerErrorCode.SCHEDULER_JOB_LAUNCH_FAILED = Failed to launch job {job}.
 SchedulerErrorCode.SCHEDULER_JOB_STEP_FAILED = Failed to execute step {step}.
 SchedulerErrorCode.SCHEDULER_INVALID_PARAMETER = Invalid value {value} for parameter {parameter}.
+SchedulerErrorCode.SCHEDULER_MISSING_PARAMETER = Missing parameter parameter {parameter}.
 
 SchedulerErrorCode.MAPREDUCE_JOB_INIT_FAILED = Failed to initialize MapReduce job {job}.
 SchedulerErrorCode.FLINK_JOB_INIT_FAILED = Failed to initialize Flink job {job}.
