Add DAIAD@Commons API implementation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -198,3 +198,8 @@ ExportErrorCode.VALIDATION_RULE_TOO_MANY_RECORDS_REMOVED = <{percent}% showers -
 # Mail errors
 MailErrorCode.LOG_FAILED = Failed to log mail send operation.
 MailErrorCode.SENT_FAILED = Failed to send mail.
+
+# Commons
+CommonsErrorCode.NAME_EXISTS = A commons group with the name {name} already exists.
+CommonsErrorCode.NOT_FOUND = The commons group was not found.
+CommonsErrorCode.OWNER_CANNOT_LEAVE_COMMONS = Owner of the Commons can not leave the group.
