Enable export of all generated messages (admin-only)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,8 @@ SharedErrorCode.RESOURCE_RELEASE_FAILED = "Failed to release resources"
 SharedErrorCode.PARSE_ERROR = Request parsing has failed.
 SharedErrorCode.JSON_SERIALIZE_ERROR = Failed to serialize object of type {type}.
 SharedErrorCode.INVALID_PARSED_OBJECT = Parsed object type is not supported.
+SharedErrorCode.REQUIRED_FIELD = The field `{name}` is required
+SharedErrorCode.INVALID_FIELD = The field `{name}` is invalid: {reason}
 
 SharedErrorCode.AUTHENTICATION = Authentication has failed.
 SharedErrorCode.AUTHENTICATION_NO_CREDENTIALS = Authentication has failed. No credentials.
