Data Service and MapReduce job refactoring
Updated MapReduce job execution implementation.
Updated Data Service to support data pre-aggregation.
Replace HBase namespace, table and column qualifiers names with enumeration members.
Refactored HBase row key management. Created helper methods for constructing row keys.
Added documentation to classes and methods.
Fixed several typos.
Updated code formatting.
Separated MapReduce job parameters into several enumerations for Hadoop, Yarn, MapReduce and custom parameters.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -104,6 +104,7 @@ DataErrorCode.HBASE_INVALID_COLUMN = HBase column {column} is not supported.
 
 # QueryErrorCode
 QueryErrorCode.EMPTY_QUERY = Query is empty.
+QueryErrorCode.GRANULARITY_NOT_SUPPORTED = Time granularity is not supported.
 QueryErrorCode.TIME_FILTER_INVALID = Time filter type is not supported.
 QueryErrorCode.TIME_FILTER_NOT_SET = Time filter is required.
 QueryErrorCode.TIME_FILTER_ABSOLUTE_END_NOT_SET = End date time is required for ABSOLUTE time filter.
