Add CAPTCHA support for password change action

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -66,6 +66,7 @@ UserErrorCode.PASSWORD_RESET_APPLICATION_NOT_SUPPORTED = Application is not supp
 
 #PasswordErrorCode
 PasswordErrorCode.INVALID_LENGTH = Password length must be at least 8 characters long.
+PasswordErrorCode.WEAK_PASSWORD = Password is weak.
 
 # ProfileErrorCode
 ProfileErrorCode.PROFILE_NOT_SUPPORTED = Profile is not supported for application {application}.
@@ -101,6 +102,7 @@ DataErrorCode.MEASUREMENT_NO_UNIQUE_INDEX = Session {session} measurement {index
 DataErrorCode.SESSION_NOT_FOUND = Session {session} does not exist.
 DataErrorCode.DUPLICATE_SESSION_ID = Duplicate session id {id} has been found for device {deviceName} - {deviceKey} of user {username}.
 DataErrorCode.HBASE_INVALID_COLUMN = HBase column {column} is not supported.
+DataErrorCode.REALTIME_ALREADY_EXISTS = A real-time shower already exists for shower id {id}.
 
 # QueryErrorCode
 QueryErrorCode.EMPTY_QUERY = Query is empty.
@@ -206,3 +208,6 @@ MailErrorCode.SENT_FAILED = Failed to send mail.
 CommonsErrorCode.NAME_EXISTS = A commons group with the name {name} already exists.
 CommonsErrorCode.NOT_FOUND = The commons group was not found.
 CommonsErrorCode.OWNER_CANNOT_LEAVE_COMMONS = Owner of the Commons can not leave the group.
+
+# CAPTCHA
+CaptchaErrorCode.CAPTCHA_VERIFICATION_ERROR = CAPTCHA verification has failed.
