--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,7 @@ SharedErrorCode.AUTHENTICATION = Authentication has failed.
 SharedErrorCode.AUTHENTICATION_NO_CREDENTIALS = Authentication has failed. No credentials.
 SharedErrorCode.AUTHENTICATION_USERNAME = Authentication has failed for user {username}.
 SharedErrorCode.AUTHORIZATION = Authorization has failed.
+SharedErrorCode.AUTHORIZATION_UTILITY_ACCESS_DENIED = Access to utility data denied.
 SharedErrorCode.AUTHORIZATION_ANONYMOUS_SESSION = Authorization has failed. Anonymous session.
 SharedErrorCode.AUTHORIZATION_MISSING_ROLE = Authorization has failed. Missing required role {role}.
 
@@ -212,3 +213,9 @@ CommonsErrorCode.OWNER_CANNOT_LEAVE_COMMONS = Owner of the Commons can not leave
 
 # CAPTCHA
 CaptchaErrorCode.CAPTCHA_VERIFICATION_ERROR = CAPTCHA verification has failed.
+
+# Savings potential
+SavingsPotentialErrorCode.CREATION_FAILED = Failed to create savings potential scenario.
+SavingsPotentialErrorCode.SCENARIO_NOT_FOUND = Savings potential scenario was not found.
+SavingsPotentialErrorCode.SCENARIO_ACCOUNT_NOT_FOUND = Savings potential account was not found.
+SavingsPotentialErrorCode.PARSE_ERROR = Failed to parse JSON serialized parameters.
