Implement budget processing
Implemented functionality for managing budgets.
Added application initializer for scheduling failed budget processing jobs.
Created helper class for selecting consumers based on cluster segments and spatial filtering.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -219,3 +219,10 @@ SavingsPotentialErrorCode.CREATION_FAILED = Failed to create savings potential s
 SavingsPotentialErrorCode.SCENARIO_NOT_FOUND = Savings potential scenario was not found.
 SavingsPotentialErrorCode.SCENARIO_ACCOUNT_NOT_FOUND = Savings potential account was not found.
 SavingsPotentialErrorCode.PARSE_ERROR = Failed to parse JSON serialized parameters.
+
+# Budget potential
+BudgetErrorCode.CREATION_FAILED = Failed to create budget.
+BudgetErrorCode.BUDGET_NOT_FOUND = Budget was not found.
+BudgetErrorCode.BUDGET_SNAPSHOT_NOT_FOUND = Budget snapshot was not found.
+BudgetErrorCode.BUDGET_ACCOUNT_NOT_FOUND = Budget account was not found.
+BudgetErrorCode.PARSE_ERROR = Failed to parse JSON serialized parameters.
